# data-guardian

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_desktop.md  index.html  repo_consistency_check.py
.github/workflows/: desktop.yml  e2e.yml  release.yml
data_guardian/: Dockerfile  encrypted.dgd  plaintext.txt  pyproject.toml  requirements.txt  secret.txt  secret.txt.dgd  secret.txt.sig  secret.txt.sig.json
data_guardian/dg_store/: keys.json
data_guardian/dg_store/keys/: ed_1b58ef4657_priv.enc  ed_1b58ef4657_pub.pem  rsa_01b298b58e_priv.enc  rsa_01b298b58e_pub.pem
data_guardian/scripts/: pre-commit
data_guardian/src/data_guardian/: __init__.py  cli.py  config.py  exceptions.py  models.py  utils.py
data_guardian/src/data_guardian.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data_guardian/src/data_guardian/api/: main.py
data_guardian/src/data_guardian/audit/: logger.py
data_guardian/src/data_guardian/cli/: main.py
data_guardian/src/data_guardian/core/: exceptions.py  header.py  keystore.py
data_guardian/src/data_guardian/crypto/: __init__.py  aead.py  asymmetric.py  ecc.py  envelope.py  hasher.py  kdf.py  signer.py  signing.py  symmetric.py  threshold.py
data_guardian/src/data_guardian/plugins/: manager.py
data_guardian/src/data_guardian/plugins/hsm/: yubikey.py
data_guardian/src/data_guardian/plugins/kms/: base.py
data_guardian/src/data_guardian/policy/: policy.py  recipients.py
data_guardian/src/data_guardian/services/: __init__.py  decryptor.py  encryptor.py  envelope.py  key_lifecycle.py  key_manager.py  signer_service.py  stream.py
data_guardian/src/data_guardian/storage/: __init__.py  file_io.py  header.py  keystore.py  paths.py
data_guardian/src/data_guardian/utils/: __init__.py  b64d.py  b64e.py  config.py  errors.py
data_guardian/tests/: test_cli.py  test_crypto.py  test_ecc.py  test_roundtrip.py  test_services.py  test_threshold.py
desktop_app/tauri/: README.md
desktop_app/tauri/resources/: README.md
desktop_app/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop_app/tauri/src-tauri/capabilities/: main.json
desktop_app/tauri/src-tauri/resources/: placeholder.txt
desktop_app/tauri/src-tauri/src/: controller.rs  desktop_config.rs  lib.rs  main.rs  runtime_paths.rs  telemetry.rs
desktop_app/tauri/src-tauri/src/bridge/: client.rs  mod.rs  transport.rs
desktop_app/tauri/src-tauri/src/process/: mod.rs
desktop_app/tauri/src-tauri/src/settings/: mod.rs
desktop_app/tauri/src-tauri/tests/: bridge_echo.rs
desktop_app/tauri/tests/: ipc_handshake.rs
desktop_app/ui/: package-lock.json  package.json  tauri.conf.json
desktop_app/ui/scripts/: tauri-dev.cjs
desktop_app/ui/src/: App.css  App.tsx  index.css
desktop_app/ui/src/api/: dg.ts
dg_core/: Cargo.toml  README.md  pyproject.toml
dg_core/.dg/: config.yaml
dg_core/policies/: default.yaml
dg_core/src/: api.rs  engine.rs  lib.rs  policy.rs
dg_core/src/dg_core/: __init__.py  config.py  logging.py  models.py  paths.py  version.py
dg_core/src/dg_core/cli/: __init__.py  main.py
dg_core/src/dg_core/daemon/: __init__.py  log_stream.py  protocol.py  server.py
dg_core/src/dg_core/ipc/: __init__.py  messages.py  server.py  transport.py
dg_core/src/dg_core/policy/: __init__.py  engine.py  schema.py
dg_core/src/dg_core/redactor/: __init__.py  engines.py  strategies.py
dg_core/src/dg_core/scanner/: __init__.py  engine.py  patterns.py  registry.py
dg_core/src/dg_core/utils/: __init__.py  checks.py  text.py  validation.py
dg_core/src/policies/: default.yaml
dg_core/tests/: conftest.py  policy.rs
dg_core/tests/benchmarks/: test_scan_bench.py
dg_core/tests/daemon/: test_protocol.py
dg_core/tests/golden/: sample_scan.json  sample_scan.txt
dg_core/tests/integration/: test_ipc.py
dg_core/tests/property/: test_redaction_idempotent.py
dg_core/tests/unit/: test_ipc_defaults.py  test_policy.py  test_redaction.py  test_scanner.py  test_scanner_golden.py  test_validation.py
docs/: contributing.md  desktop_release_checklist.md  install_linux.md  install_macos.md  install_windows.md  ipc.md  ipc_protocol.md  migration_to_desktop_only.md  release.md  security_review.md  troubleshooting.md  user_guide.md
e2e/: run_e2e.py
e2e/fixtures/: sample.txt  test_policy.yaml
e2e/rpc_client/: Cargo.toml
e2e/rpc_client/src/: main.rs
e2e/rpc_client/tests/: desktop_flow.rs
packaging/: README.md  pyinstaller.spec
packaging/assets/: config.toml  policy.json
packaging/linux/: SIGNING.md
packaging/macos/: SIGNING.md
packaging/windows/: SIGNING.md
scripts/: build_core_bundle.py  build_dg_core.mjs  dev_all.ps1  dev_all.sh
src/: App.tsx  api.ts
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src-tauri/src/process/: mod.rs
src-tauri/src/settings/: mod.rs
src/components/: DgPanel.tsx  SettingsPanel.tsx  Terminal.tsx
src/state/: settings.ts
src/styles/: global.css
test-results/: .last-run.json
tests/: desktop_smoke.rs
tests/desktop/: smoke.test.mjs
tests/ui/: smoke.spec.ts
ui/desktop/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/desktop/src/: App.tsx
ui/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/desktop/src-tauri/src/: bridge.rs  main.rs
ui/desktop/src/components/: CommandPalette.tsx  SettingsPanel.tsx  TerminalPanel.tsx
ui/desktop/src/hooks/: useKeyboardShortcut.ts
ui/desktop/src/styles/: global.css
