[package]
name = "data_guardian_desktop"
version = "0.1.0"
edition = "2021"

[features]
default = []
auto-update = []
debug-tcp-fallback = []

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
directories = "5.0"
futures = "0.3"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9"
thiserror = "1.0"
tauri = { version = "^2.0.0", features = ["default"] }
tauri-plugin-shell = "^2.0.0"
tauri-plugin-store = { version = "^2.0.0" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "process"] }
tokio-util = "0.7"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
tokio-named-pipes = "0.1"

[target.'cfg(not(windows))'.dependencies]
tempfile = "3.10"

