[package]
name = "desktop_app"
version = "0.1.0"
edition = "2021"

[features]
default = []
auto-update = ["tauri-plugin-updater"]
debug-tcp-fallback = []

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.21"
directories = "5.0"
dg_core = { path = "../../../dg_core" }
futures = "0.3"
once_cell = "1.19"
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.9"
thiserror = { workspace = true }
tauri = { version = "^2.0.0", features = ["default"] }
tauri-plugin-shell = "^2.0.0"
tauri-plugin-store = { version = "^2.0.0" }
tauri-plugin-updater = { version = "^2.0.0", optional = true }
tokio = { workspace = true, features = ["process"] }
tokio-util = "0.7"
tokio-stream = "0.1"
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
tokio-named-pipes = "0.1"

[target.'cfg(not(windows))'.dependencies]
tempfile = "3.10"

