[package]
name = "data-guardian-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
base64 = "0.22"
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["api-all"] }
tauri-plugin-window-state = "0.1"
thiserror = "1.0"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread", "net", "time"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Pipes"] }
